--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,13 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-ie-driver:3.11.0"
     testCompile "org.seleniumhq.selenium:selenium-chrome-driver:3.11.0"
     testCompile "org.seleniumhq.selenium:selenium-firefox-driver:3.11.0"
+    testCompile group: 'com.github.javafaker', name: 'javafaker', version: '0.14'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '1.0.0'
     compile "org.slf4j:slf4j-api:1.6.1"
     compile "org.slf4j:slf4j-simple:1.6.1"
+    compile group: 'org.immutables', name: 'value', version: '2.5.5'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '2.9.3'
+
 }
 
 tasks.withType(Test) {
