--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     testCompile group: 'org.assertj', name: 'assertj-core', version: '1.0.0'
     compile "org.slf4j:slf4j-api:1.6.1"
     compile "org.slf4j:slf4j-simple:1.6.1"
-    compile group: 'org.immutables', name: 'value', version: '2.5.5'
+    compile 'org.immutables:value:2.6.1'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '2.9.3'
 
 }
